--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Posts - Lee Brownhill&#39;s Blog</title>
+	<title>About - Lee Brownhill&#39;s Blog</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,6 @@
 
 	<link rel="stylesheet" href="/css/style.css">
 	
-	<link rel="alternate" type="application/rss+xml" href="/posts/index.xml" title="Lee Brownhill's Blog">
 
 	<link rel="shortcut icon" href="/favicon.ico">
 		
@@ -76,29 +75,32 @@
 		<div class="wrapper flex">
 			<div class="primary">
 			
-<main class="main list" role="main">
-	<header class="main__header">
-		<h1 class="main__title">Posts</h1>
-	</header><article class="list__item post">
-	
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/posts/post2/" rel="bookmark">
-			Post2
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor elit leo, ut pulvinar felis varius et. Ut lacus eros, efficitur vel convallis sit amet, ornare ultrices dui. Suspendisse vulputate vehicula odio, vel vulputate enim malesuada varius. Pellentesque volutpat nibh vitae ex efficitur dictum vel et lectus. Morbi ornare ut sem et vestibulum. Cras pretium varius dui, quis faucibus arcu commodo ut. Nam viverra nunc dictum sapien lacinia rutrum. Pellentesque feugiat purus nibh, vitae tempus eros ornare vel.</p>
-	</div>
-</article>
-</main>
+  <h1>About</h1>
+
+<br>
+
+  
+<br>
+<br>
+
+  <p>Lee Brownhill is a SQL Server DBA with more years of experience than he cares to admit.
+Currently, he works as a Principal Cloud DBA at <a href="https://cloudrede.com/">Cloud Rede</a>, helping clients optimise their SQL workloads in both Azure and AWS. His passion lies in optimisation and automation within SQL Server, and he confesses that he will never tire of making things run faster.</p>
+<p>His journey in IT began many moons ago in IT support, where he quickly became fascinated with his organisation’s SQL Server.
+It didn&rsquo;t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.</p>
+<p>Fast forward several years, and Lee is now in a consultant role, advising clients on how to get the most out of their cloud workloads.</p>
+<p>He holds certifications across a variety of Azure and AWS specialisms.</p>
+<img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:800px; height:auto;">
+<br>
+<br>
+<br>
+<br>
+<p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include SQLBits, Data Relay, and the Redgate Summit. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
+<p>A notable career highlight for Lee was the opportunity to spend a whole week with <a href="https://www.amazon.com/stores/Itzik-Ben-Gan/author/B001IGQENW?ref=ap_rdr&amp;isDramIntegrated=true&amp;shoppingPortalEnabled=true">Itzik Ben-Gan</a> in the classroom. Lee attended Itzik’s week-long training session, titled “Advanced T-SQL Querying, Programming, and Tuning for SQL Server.” <br>
+Reflecting on the experience, Lee states, “This was a pivotal moment in my career. I discovered the astounding depth you can achieve with SQL Server. When I grow up, I hope to be even 5% as knowledgeable as Itzik.”</p>
 
 
 			</div>
 			
-
 		</div>
 		<footer class="footer">
 	<div class="container footer__container flex">
