--- a/projects/index.html
+++ b/projects/index.html
@@ -116,7 +116,9 @@
 			<!--
 <iframe src="https://1drv.ms/p/c/8d3aec11cc6d5c7f/IQTiL8hP-uOlQ4zX-7HA2aQdAZO4nqE7Bavzs7p7wTFXi_k?em=2&amp;wdAr=1.7770833333333333&amp;wdEaaCheck=1" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 -->
-<iframe src="https://1drv.ms/b/c/8d3aec11cc6d5c7f/IQRqe3DCJ0jIRpOw_f_Pb1TfAX5HDOSN7nGRqKm-ASCfRpc" width="98" height="120" frameborder="0" scrolling="no"></iframe>
+<!--
+<iframe src="https://1drv.ms/b/c/8d3aec11cc6d5c7f/IQRqe3DCJ0jIRpOw_f_Pb1TfAX5HDOSN7nGRqKm-ASCfRpc" width="600" height="400" frameborder="0" scrolling="yes"></iframe>
+-->
 		</div>
 	</article>
 </main>
