--- a/contact/index.html
+++ b/contact/index.html
@@ -138,6 +138,7 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/post2/">Post2</a></li>
 		</ul>
 	</div>
