--- a/index.html
+++ b/index.html
@@ -112,6 +112,29 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/1_sqlunittestingpart1/">
+		<img class="thumbnail__image" src="/img/featured/tsqlt_logo.png" alt="SQL Unit Testing Using tSQLt: Part 1">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/1_sqlunittestingpart1/" rel="bookmark">
+			SQL Unit Testing Using tSQLt: Part 1
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br>
+<!--
+### Unit...what now?
+-->
+<p>Other practitioners of code slinging, such as .net folks, have been unit testing their code for many moons now. Us SQL folks however rarely seem to do this, at least in my experience.</p>
+<p>Several job roles ago, I had to use unit testing on a daily basis. It was heavily integrated into our work flow via the CI/CD pipelines we used. Ultimately, if you checked some code in, you made sure you had the associated unit tests written for it.</p>
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/post2/">
 		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="Post2">
 		</a>
@@ -143,6 +166,7 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/post2/">Post2</a></li>
 		</ul>
 	</div>
