--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	
 	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/1_sqlunittestingpart1/">
-		<img class="thumbnail__image" src="/img/featured/tsqlt_logo.png" alt="SQL Unit Testing Using tSQLt: Part 1">
+		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="SQL Unit Testing Using tSQLt: Part 1">
 		</a>
 	</figure>
 	<header class="list__header">
