--- a/about/index.html
+++ b/about/index.html
@@ -148,7 +148,6 @@ Reflecting on the experience, Lee states, “This was a pivotal moment in my car
 	<div class="widget__content">
 		<ul class="widget__list">
 			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/post2/">Post2</a></li>
 		</ul>
 	</div>
 </div>
@@ -175,6 +174,14 @@ Reflecting on the experience, Lee states, “This was a pivotal moment in my car
 		</div>
 
 		
+	</div>
+</div>
+<div class="widget-taglist widget">
+	<h4 class="widget__title">Tags</h4>
+	<div class="widget__content">
+		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="Sql">Sql</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/tsql/" title="Tsql">Tsql</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/unit-testing/" title="Unit Testing">Unit Testing</a>
 	</div>
 </div>
 </aside>
