--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 ### Unit...what now?
 -->
 <p>Unit&hellip;what now?</p>
-<p>Other practitioners of code-slinging, such as .NET folks, have been unit testing their code for many moons now. We SQL folks, however, rarely seem to do this, at least in my experience.</p>
-<p>Several job roles ago, I had to use unit testing on a daily basis. It was heavily integrated into our workflow via the CI/CD pipelines we used</p>
+<p>Other practitioners of code-slinging, such as .NET folks, have been unit testing their code for many moons now. We SQL folks, however, rarely seem to do this, at least in my experience.
+Several job roles ago, I had to use unit testing on a daily basis. It was heavily integrated into our workflow via the CI/CD pipelines we used</p>
 	</div>
 </article>
 </main>
