--- a/about/index.html
+++ b/about/index.html
@@ -148,6 +148,7 @@ Reflecting on the experience, Lee states, “This was a pivotal moment in my car
 	<div class="widget__content">
 		<ul class="widget__list">
 			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/post2/">Post2</a></li>
 		</ul>
 	</div>
 </div>
