--- a/index.html
+++ b/index.html
@@ -112,6 +112,28 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/2_sqlunittestingpart2/">
+		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="SQL Unit Testing Using tSQLt: Part 2">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/2_sqlunittestingpart2/" rel="bookmark">
+			SQL Unit Testing Using tSQLt: Part 2
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br>
+<p>Unit Testing Experts</p>
+<br>
+<p>In the <a href="https://www.leebrownhill.com/posts/1_sqlunittestingpart1/">last post</a>, we went through what unit testing is, at least when discussing it in the context of SQL Server. In addition to that, we discussed what benefits using the open-source framework <a href="https://tsqlt.org/">tSQLt</a> can bring.
+Of course, you have studied that post diligently and now we&rsquo;re all unit testing experts, right? hello?</p>
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/1_sqlunittestingpart1/">
 		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="SQL Unit Testing Using tSQLt: Part 1">
 		</a>
@@ -149,6 +171,7 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/2_sqlunittestingpart2/">SQL Unit Testing Using tSQLt: Part 2</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
 		</ul>
 	</div>
