--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@
 Currently, he works as a Principal Cloud DBA at <a href="https://cloudrede.com/">Cloud Rede</a>, helping clients optimise their SQL workloads in both Azure and AWS. His passion lies in optimisation and automation within SQL Server, and he confesses that he will never tire of making things run faster.</p>
 <p>His journey in IT began many moons ago in IT support, where he quickly became fascinated with his organisation’s SQL Server.
 It didn&rsquo;t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.</p>
-<p>Fast forward several years, and Lee is now in a Principal DBA / consultant role, advising clients on how to get the most out of their cloud workloads.</p>
+<p>Fast forward many years, and Lee is now in a Principal DBA / consultant role, advising clients on how to get the most out of their cloud workloads.</p>
 <p>He holds certifications across a variety of Azure and AWS specialisms.</p>
 <img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:800px; height:auto;">
 <br>
@@ -125,6 +125,7 @@ It didn&rsquo;t take long to realise that he wanted to work with SQL Server and 
 <br>
 <br>
 <p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include <a href="https://sqlbits.com/">SQLBits</a>, <a href="https://datarelay.co.uk/">Data Relay</a>, and the <a href="https://www.red-gate.com/">Redgate Summit</a>. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
+<img src="../img/redgate_summit.png" alt="Lee at Redgate" style="width:800px; height:auto;">
 <p>A notable career highlight for Lee was the opportunity to spend a whole week with <a href="https://www.amazon.com/stores/Itzik-Ben-Gan/author/B001IGQENW?ref=ap_rdr&amp;isDramIntegrated=true&amp;shoppingPortalEnabled=true">Itzik Ben-Gan</a> in the classroom. Lee attended Itzik’s week-long training session, titled “Advanced T-SQL Querying, Programming, and Tuning for SQL Server.” <br>
 Reflecting on the experience, Lee states, “This was a pivotal moment in my career. I discovered the astounding depth you can achieve within SQL Server. When I grow up, I hope to be even 5% as knowledgeable as Itzik.”</p>
 
