--- a/about/index.html
+++ b/about/index.html
@@ -138,7 +138,7 @@ Reflecting on the experience, Lee states, “This was a pivotal moment in my car
 		<img alt="Lee Brownhill avatar" src="/img/avatar.png" class="avatar" height="90" width="90">
 	</figure>
 	<div class="authorbox__header">
-		<span class="authorbox__name">About Lee Brownhill</span>
+		<span class="authorbox__name">Author Lee Brownhill</span>
 	</div>
 	<div class="authorbox__description">
 		Lee Brownhill is a SQL Server Professional. He enjoys making SQL Server go faster
