--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<br>
 <p>The Journey Continues!</p>
 <p>Welcome back to the <a href="https://www.leebrownhill.com/tags/tsql/">tSQLt series</a>, where we are covering the fundamentals of Unit Testing within SQL Server by using the tSQLt Framework.</p>
-<p>Today we are progressing onward by discussing some of the useful features within tSQLt to ensure our tests are accurate, reliable, and repeatable.</p>
+<p>Today we&rsquo;re progressing onward by discussing some of the useful features within tSQLt to ensure our tests are accurate, reliable, and repeatable.</p>
 	</div>
 </article><article class="list__item post">
 	
