--- a/index.html
+++ b/index.html
@@ -112,6 +112,27 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/4_sqlunittestingpart4/">
+		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="SQL Unit Testing Using tSQLt: Part 4">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/4_sqlunittestingpart4/" rel="bookmark">
+			SQL Unit Testing Using tSQLt: Part 4
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br>
+<p>We&rsquo;re back once again, with another instalment of the tSQLt series. I hope you&rsquo;ve been enjoying it so far. Personally, I&rsquo;ve had a blast getting back into this topic.
+In the last post, we covered one of the many useful features of tSQLt, the Fake Function option.</p>
+<p>Taking this further, in today&rsquo;s post, I want to cover the <a href="https://tsqlt.org/user-guide/isolating-dependencies/spyprocedure/">Spy Procedure</a> option.</p>
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/3_sqlunittestingpart3/">
 		<img class="thumbnail__image" src="/img/featured/post_logo.png" alt="SQL Unit Testing Using tSQLt: Part 3">
 		</a>
@@ -191,6 +212,7 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/4_sqlunittestingpart4/">SQL Unit Testing Using tSQLt: Part 4</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/3_sqlunittestingpart3/">SQL Unit Testing Using tSQLt: Part 3</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/2_sqlunittestingpart2/">SQL Unit Testing Using tSQLt: Part 2</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
