--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body class="body">
 	<div class="container container--outer">
 		<header class="header">
-  		
-  		
+	
+  	
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-7983PDFMXQ"></script>
       <script>
         var doNotTrack = false;
@@ -104,6 +104,8 @@
 </nav>
 
 	</div>
+
+	<meta property="og:description" content="">
 </header>
 		<div class="wrapper flex">
 			<div class="primary">
