--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<meta name="author" content="map[avatar:img/avatar.png bio:Lee Brownhill is a SQL Server Professional. He enjoys making SQL Server go faster name:Lee Brownhill]">
 
-	<meta property="og:image" content="https://leebrownhill.github.io/">
+	<meta name="image" property="og:image" content="https://leebrownhill.github.io/">
 </header>
 		<div class="wrapper flex">
 			<div class="primary">
