--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,14 @@
 	<title>About - Lee Brownhill&#39;s Blog</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
+		<meta property="og:url" content="https://leebrownhill.github.io/about/">
+  <meta property="og:site_name" content="Lee Brownhill&#39;s Blog">
+  <meta property="og:title" content="About">
+  <meta property="og:description" content="Lee Brownhill is a SQL Server DBA with more years of experience than he cares to admit. Currently, he works as a Principal Cloud DBA at Cloud Rede, helping clients optimise their SQL workloads in both Azure and AWS. His passion lies in optimisation and automation within SQL Server, and he confesses that he will never tire of making things run faster.
+His journey in IT began many moons ago in IT support, where he quickly became fascinated with his organisation’s SQL Server. It didn’t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.">
+  <meta property="og:locale" content="en_us">
+  <meta property="og:type" content="article">
+
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
