--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,14 @@
 	<title>Contact - Lee Brownhill&#39;s Blog</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
+		<meta property="og:url" content="https://leebrownhill.github.io/contact/">
+  <meta property="og:site_name" content="Lee Brownhill&#39;s Blog">
+  <meta property="og:title" content="Contact">
+  <meta property="og:description" content="The best way to contact me is via LinkedIn, as im quite active over there
+LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.co.uk">
+  <meta property="og:locale" content="en_us">
+  <meta property="og:type" content="article">
+
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
