--- a/projects/index.html
+++ b/projects/index.html
@@ -38,6 +38,12 @@
           gtag('config', 'G-7983PDFMXQ');
         }
       </script>
+
+	<meta name="author" content="map[avatar:img/avatar.png bio:Lee Brownhill is a SQL Server Professional. He enjoys making SQL Server go faster name:Lee Brownhill]">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="https://leebrownhill.github.io/">
+	<meta property="og:image:type" content="img/png">
+
 </head>
 <body class="body">
 	<div class="container container--outer">
