--- a/about/index.html
+++ b/about/index.html
@@ -142,7 +142,8 @@ It didn&rsquo;t take long to realise that he wanted to work with SQL Server and 
 <br>
 <br>
 <p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include <a href="https://sqlbits.com/">SQLBits</a>, <a href="https://datarelay.co.uk/">Data Relay</a>, and the <a href="https://www.red-gate.com/">Redgate Summit</a>. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
-<!-- <img src="../img/redgate_summit.png" alt="Lee at Redgate" style="width:300px; height:auto;"> -->
+<p>Lee is a proud Redgate Community Ambassador too:
+<img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="width:300px; height:auto;"></p>
 <p>A notable career highlight for Lee was the opportunity to spend a whole week with <a href="https://www.amazon.com/stores/Itzik-Ben-Gan/author/B001IGQENW?ref=ap_rdr&amp;isDramIntegrated=true&amp;shoppingPortalEnabled=true">Itzik Ben-Gan</a> in the classroom. Lee attended Itzik’s week-long training session, titled “Advanced T-SQL Querying, Programming, and Tuning for SQL Server.” <br>
 Reflecting on the experience, Lee states, “This was a pivotal moment in my career. I discovered the astounding depth you can achieve within SQL Server. When I grow up, I hope to be even 5% as knowledgeable as Itzik.”</p>
 
