--- a/about/index.html
+++ b/about/index.html
@@ -140,10 +140,13 @@ It didn&rsquo;t take long to realise that he wanted to work with SQL Server and 
 <br>
 <br>
 <br>
+<p>Lee has been recognized as a <a href="https://www.red-gate.com/hub/community/ambassadors/ambassador/LeeBrownhill/">Redgate Community Ambassador</a>.
+Redgate is renowned for its expertise in database development and DevOps, and as an ambassador, he has the opportunity to contribute to the SQL community, share insights, and help others make the most of Redgate’s tools.
+Lee loves engaging with the community, writing about SQL topics, and supporting best practices in database development.</p>
+<br>
+<p>     <img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="width:100px; height:auto;"></p>
 <br>
 <p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include <a href="https://sqlbits.com/">SQLBits</a>, <a href="https://datarelay.co.uk/">Data Relay</a>, and the <a href="https://www.red-gate.com/">Redgate Summit</a>. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
-<p>Lee is a proud Redgate Community Ambassador too:
-<img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="width:300px; height:auto;"></p>
 <p>A notable career highlight for Lee was the opportunity to spend a whole week with <a href="https://www.amazon.com/stores/Itzik-Ben-Gan/author/B001IGQENW?ref=ap_rdr&amp;isDramIntegrated=true&amp;shoppingPortalEnabled=true">Itzik Ben-Gan</a> in the classroom. Lee attended Itzik’s week-long training session, titled “Advanced T-SQL Querying, Programming, and Tuning for SQL Server.” <br>
 Reflecting on the experience, Lee states, “This was a pivotal moment in my career. I discovered the astounding depth you can achieve within SQL Server. When I grow up, I hope to be even 5% as knowledgeable as Itzik.”</p>
 
