--- a/404.html
+++ b/404.html
@@ -142,6 +142,7 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/5_sqlunittestingpart5/">SQL Unit Testing Using tSQLt: Part 5</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/4_sqlunittestingpart4/">SQL Unit Testing Using tSQLt: Part 4</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/3_sqlunittestingpart3/">SQL Unit Testing Using tSQLt: Part 3</a></li>
@@ -178,6 +179,8 @@
 <div class="widget-taglist widget">
 	<h4 class="widget__title">Tags</h4>
 	<div class="widget__content">
+		<a class="widget-taglist__link widget__link btn" href="/tags/optimisation/" title="Optimisation">Optimisation</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/performance-tuning/" title="Performance Tuning">Performance Tuning</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/redgate/" title="Redgate">Redgate</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="Sql">Sql</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/tsql/" title="Tsql">Tsql</a>
