--- a/about/index.html
+++ b/about/index.html
@@ -45,6 +45,14 @@ His journey in IT began many moons ago in IT support, where he quickly became fa
 	<meta property="og:image" content="https://leebrownhill.github.io/">
 	<meta property="og:image:type" content="img/png">
 
+	<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rtl5c4wqh1");
+	</script>
+
 </head>
 <body class="body">
 	<div class="container container--outer">
