--- a/404.html
+++ b/404.html
@@ -152,6 +152,7 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/8_redgatesqltestandsqlcop/">Redgate SQLTest and SQLCop</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/7_parallelismproblemswithsqlserver/">Parallelism Problems within SQL Server</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/5_sqlunittestingpart5/">SQL Unit Testing Using tSQLt: Part 5</a></li>
@@ -195,7 +196,8 @@
 		<a class="widget-taglist__link widget__link btn" href="/tags/parallelism/" title="Parallelism">Parallelism</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/performance-tuning/" title="Performance Tuning">Performance Tuning</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/redgate/" title="Redgate">Redgate</a>
-		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="SQL">SQL</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="Sql">Sql</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/sqlcop/" title="SQLCop">SQLCop</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/tsql/" title="Tsql">Tsql</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/unit-testing/" title="Unit Testing">Unit Testing</a>
 	</div>
