--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/8_redgatesqltestandsqlcop/">
+		<img class="thumbnail__image" src="/img/featured/spy.png" alt="Redgate SQLTest and SQLCop">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/8_redgatesqltestandsqlcop/" rel="bookmark">
+			Redgate SQLTest and SQLCop
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br> As part of Redgate SQL Test, you get SQLCop <br> (although the tests themselves are freely available to use). <br> <br>
+SQLCop is a set of over 100 open-source tests for your databases. <br>
+The tests were originally maintained by George Mastros but are now managed by Redgate Software
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/7_parallelismproblemswithsqlserver/">
 		<img class="thumbnail__image" src="/img/featured/runners.png" alt="Parallelism Problems within SQL Server">
 		</a>
@@ -300,6 +320,7 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/8_redgatesqltestandsqlcop/">Redgate SQLTest and SQLCop</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/7_parallelismproblemswithsqlserver/">Parallelism Problems within SQL Server</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/5_sqlunittestingpart5/">SQL Unit Testing Using tSQLt: Part 5</a></li>
@@ -343,7 +364,8 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 		<a class="widget-taglist__link widget__link btn" href="/tags/parallelism/" title="Parallelism">Parallelism</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/performance-tuning/" title="Performance Tuning">Performance Tuning</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/redgate/" title="Redgate">Redgate</a>
-		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="SQL">SQL</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/sql/" title="Sql">Sql</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/sqlcop/" title="SQLCop">SQLCop</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/tsql/" title="Tsql">Tsql</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/unit-testing/" title="Unit Testing">Unit Testing</a>
 	</div>
