--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	
 	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/8_redgatesqltestandsqlcop/">
-		<img class="thumbnail__image" src="/img/featured/spy.png" alt="Redgate SQLTest and SQLCop">
+		<img class="thumbnail__image" src="/img/featured/cop.png" alt="Redgate SQLTest and SQLCop">
 		</a>
 	</figure>
 	<header class="list__header">
@@ -325,9 +325,6 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/5_sqlunittestingpart5/">SQL Unit Testing Using tSQLt: Part 5</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/4_sqlunittestingpart4/">SQL Unit Testing Using tSQLt: Part 4</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/3_sqlunittestingpart3/">SQL Unit Testing Using tSQLt: Part 3</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/2_sqlunittestingpart2/">SQL Unit Testing Using tSQLt: Part 2</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/1_sqlunittestingpart1/">SQL Unit Testing Using tSQLt: Part 1</a></li>
 		</ul>
 	</div>
 </div>
