--- a/about/index.html
+++ b/about/index.html
@@ -145,16 +145,38 @@ Currently, he works as a Principal Cloud DBA at <a href="https://cloudrede.com/"
 <p>His journey in IT began many moons ago in IT support, where he quickly became fascinated with his organisation’s SQL Server.
 It didn&rsquo;t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.</p>
 <p>Fast forward many years, and Lee is now in a Principal DBA / consultant role, advising clients on how to get the most out of their cloud workloads.</p>
-<p>He holds certifications across a variety of Azure and AWS specialisms.</p>
-<img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:800px; height:auto;">
 <br>
 <br>
+<table style="border: none; border-collapse: collapse; width: 100%;">
+  <tr style="border: none;">
+    <td style="width: 25%; border: none; padding: 10px;">
+      He holds certifications across a variety of Azure and AWS specialisms.  
+    </td>
+    <td style="width: 75%; border: none; padding: 0; vertical-align: middle;">
+      <img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:800px; height:auto;">
+    </td>
+  </tr>
+</table>
 <br>
-<p>Lee has been recognized as a <a href="https://www.red-gate.com/hub/community/ambassadors/ambassador/LeeBrownhill/">Redgate Community Ambassador</a>.
-Redgate is renowned for its expertise in database development and DevOps, and as an ambassador, he has the opportunity to contribute to the SQL community, share insights, and help others make the most of Redgate’s tools.
-Lee loves engaging with the community, writing about SQL topics, and supporting best practices in database development.</p>
 <br>
-<p>     <img src="../img/2025_Community_AMBASSADOR_badge.png" alt="Redgate Community Ambassador" style="width:100px; height:auto;"></p>
+<table style="border: none; border-collapse: collapse; width: 100%;">
+  <tr style="border: none;">
+    <td style="width: 85%; border: none; padding: 10px;">
+      Lee has been recognized as a 
+      <a href="https://www.red-gate.com/hub/community/ambassadors/ambassador/LeeBrownhill/">Redgate Community Ambassador</a>. 
+      Redgate is renowned for its expertise in database development and DevOps, and as an ambassador, 
+      he has the opportunity to contribute to the SQL community, share insights, and help others make 
+      the most of Redgate’s tools. <br><br>
+      Lee loves engaging with the community, writing about SQL topics, and supporting best practices in 
+      database development.
+    </td>
+    <td style="width: 15%; border: none; padding: 0; vertical-align: middle;">
+      <img src="../img/2025_Community_AMBASSADOR_badge.png" 
+           alt="Redgate Community Ambassador" 
+           style="max-width: 100px; height: auto;">
+    </td>
+  </tr>
+</table>
 <br>
 <p>Lee is a regular attendee at tech events, particularly those focused on the Data Platform. Some of his favourites include <a href="https://sqlbits.com/">SQLBits</a>, <a href="https://datarelay.co.uk/">Data Relay</a>, and the <a href="https://www.red-gate.com/">Redgate Summit</a>. He deeply values the SQL Server community and remains grateful for the support and knowledge it has shared with him.</p>
 <p>A notable career highlight for Lee was the opportunity to spend a whole week with <a href="https://www.amazon.com/stores/Itzik-Ben-Gan/author/B001IGQENW?ref=ap_rdr&amp;isDramIntegrated=true&amp;shoppingPortalEnabled=true">Itzik Ben-Gan</a> in the classroom. Lee attended Itzik’s week-long training session, titled “Advanced T-SQL Querying, Programming, and Tuning for SQL Server.” <br>
