--- a/about/index.html
+++ b/about/index.html
@@ -145,18 +145,9 @@ Currently, he works as a Principal Cloud DBA at <a href="https://cloudrede.com/"
 <p>His journey in IT began many moons ago in IT support, where he quickly became fascinated with his organisation’s SQL Server.
 It didn&rsquo;t take long to realise that he wanted to work with SQL Server and so, eventually started his journey as a Production DBA at a SaaS financial company. Realising he had a knack for making systems more efficient, he transitioned to a Developer DBA role, bridging the gap between Infrastructure DBAs and developers.</p>
 <p>Fast forward many years, and Lee is now in a Principal DBA / consultant role, advising clients on how to get the most out of their cloud workloads.</p>
+<p>He holds certifications across a variety of Azure and AWS specialisms.</p>
+<img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:60%; height:auto;">
 <br>
-<br>
-<table style="border: none; border-collapse: collapse; width: 100%;">
-  <tr style="border: none;">
-    <td style="width: 25%; border: none; padding: 10px;">
-      He holds certifications across a variety of Azure and AWS specialisms.  
-    </td>
-    <td style="width: 75%; border: none; padding: 0; vertical-align: middle;">
-      <img src="../img/BadgeBanner.png" alt="Certifications Awarded" style="width:800px; height:auto;">
-    </td>
-  </tr>
-</table>
 <br>
 <br>
 <table style="border: none; border-collapse: collapse; width: 100%;">
@@ -173,7 +164,7 @@ It didn&rsquo;t take long to realise that he wanted to work with SQL Server and 
     <td style="width: 15%; border: none; padding: 0; vertical-align: middle;">
       <img src="../img/2025_Community_AMBASSADOR_badge.png" 
            alt="Redgate Community Ambassador" 
-           style="max-width: 100px; height: auto;">
+           style="max-width: 80px; height: auto;">
     </td>
   </tr>
 </table>
