--- a/projects/index.html
+++ b/projects/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Projects - Lee Brownhill&#39;s Blog</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
-		<meta property="og:url" content="http://localhost:1313/projects/">
+		<meta property="og:url" content="https://leebrownhill.github.io/projects/">
   <meta property="og:site_name" content="Lee Brownhill&#39;s Blog">
   <meta property="og:title" content="Projects">
   <meta property="og:description" content="Coming soon!">
@@ -23,10 +23,25 @@
 
 	<link rel="shortcut icon" href="/favicon.ico">
 		
+		
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-7983PDFMXQ"></script>
+      <script>
+        var doNotTrack = false;
+        if ( false ) {
+          var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+          var doNotTrack = (dnt == "1" || dnt == "yes");
+        }
+        if (!doNotTrack) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-7983PDFMXQ');
+        }
+      </script>
 
 	<meta name="author" content="map[avatar:img/avatar.png bio:Lee Brownhill is a SQL Server Professional. He enjoys making SQL Server go faster name:Lee Brownhill]">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="http://localhost:1313/">
+	<meta property="og:image" content="https://leebrownhill.github.io/">
 	<meta property="og:image:type" content="img/png">
 
 	
