--- a/404.html
+++ b/404.html
@@ -152,11 +152,11 @@
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/11_paramsniffingsimpleexample/">Parameter Sniffing: A Simple Example</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/10_sqlbits2025_helpingoutandhavingfun/">SQLBits 2025: Helping out and having fun</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/9_podcasts-speaking-and-why-now/">Podcasts, Speaking, and Why I’m Doing This Now</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/8_redgatesqltestandsqlcop/">Redgate SQLTest and SQLCop</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/7_parallelismproblemswithsqlserver/">Parallelism Problems within SQL Server</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 		</ul>
 	</div>
 </div>
@@ -195,6 +195,8 @@
 		<a class="widget-taglist__link widget__link btn" href="/tags/events/" title="Events">Events</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/optimisation/" title="Optimisation">Optimisation</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/parallelism/" title="Parallelism">Parallelism</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/parameter-sniffing/" title="Parameter Sniffing">Parameter Sniffing</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/performance/" title="Performance">Performance</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/performance-tuning/" title="Performance Tuning">Performance Tuning</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/professional-growth/" title="Professional Growth">Professional Growth</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/redgate/" title="Redgate">Redgate</a>
