--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/11_paramsniffingsimpleexample/">
+		<img class="thumbnail__image" src="/img/featured/sniff.png" alt="Parameter Sniffing: A Simple Example">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/11_paramsniffingsimpleexample/" rel="bookmark">
+			Parameter Sniffing: A Simple Example
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br> A while ago, I was working with a client who was experiencing performance issues on SQL Server 2019.
+<br> <br> We quickly isolated the problematic procedure and they asked &rsquo;this normally runs fine, why is this a problem now?&rsquo;
+A fair question&hellip;
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/10_sqlbits2025_helpingoutandhavingfun/">
 		<img class="thumbnail__image" src="/img/featured/SQLBits2025.jpg" alt="SQLBits 2025: Helping out and having fun">
 		</a>
@@ -318,33 +338,13 @@ In the last post, we covered one of the many useful features of tSQLt, the Fake 
 <p>In the <a href="https://www.leebrownhill.com/posts/1_sqlunittestingpart1/">last post</a>, we went through what unit testing is, at least when discussing it in the context of SQL Server. In addition to that, we discussed what benefits using the open-source framework <a href="https://tsqlt.org/">tSQLt</a> can bring.
 Of course, you have studied that post diligently and now we&rsquo;re all unit testing experts, right? &hellip; hello?</p>
 	</div>
-</article><article class="list__item post">
-	
-	<figure class="list__thumbnail thumbnail">
-		<a class="thumbnail__link" href="/posts/1_sqlunittestingpart1/">
-		<img class="thumbnail__image" src="/img/featured/tsqlt_logo.png" alt="SQL Unit Testing Using tSQLt: Part 1">
-		</a>
-	</figure>
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/posts/1_sqlunittestingpart1/" rel="bookmark">
-			SQL Unit Testing Using tSQLt: Part 1
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<br>
-<!--
-### Unit...what now?
--->
-<p>Unit&hellip;what now?</p>
-<p>Other practitioners of code-slinging, such as .NET folks, have been unit testing their code for many moons now. We SQL folks, however, rarely seem to do this, at least in my experience.
-Several job roles ago, I had to use unit testing on a daily basis. It was heavily integrated into our workflow via the CI/CD pipelines we used</p>
-	</div>
 </article>
 </main>
 
+<div class="pagination">
+	<span class="pagination__item pagination__item--current">1/2</span>
+	<a class="pagination__item pagination__item--next btn" href="/page/2/">»</a>
+</div>
 
 			</div>
 			<aside class="sidebar"><div class="widget-search widget">
@@ -358,11 +358,11 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/11_paramsniffingsimpleexample/">Parameter Sniffing: A Simple Example</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/10_sqlbits2025_helpingoutandhavingfun/">SQLBits 2025: Helping out and having fun</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/9_podcasts-speaking-and-why-now/">Podcasts, Speaking, and Why I’m Doing This Now</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/8_redgatesqltestandsqlcop/">Redgate SQLTest and SQLCop</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/7_parallelismproblemswithsqlserver/">Parallelism Problems within SQL Server</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/6_sqloptimisationwhylessismore/">SQL Server Optimisation: Why Less Is More</a></li>
 		</ul>
 	</div>
 </div>
@@ -401,6 +401,8 @@ Several job roles ago, I had to use unit testing on a daily basis. It was heavil
 		<a class="widget-taglist__link widget__link btn" href="/tags/events/" title="Events">Events</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/optimisation/" title="Optimisation">Optimisation</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/parallelism/" title="Parallelism">Parallelism</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/parameter-sniffing/" title="Parameter Sniffing">Parameter Sniffing</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/performance/" title="Performance">Performance</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/performance-tuning/" title="Performance Tuning">Performance Tuning</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/professional-growth/" title="Professional Growth">Professional Growth</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/redgate/" title="Redgate">Redgate</a>
