--- a/index.html
+++ b/index.html
@@ -138,6 +138,25 @@
 	<article class="list__item post">
 	
 	<figure class="list__thumbnail thumbnail">
+		<a class="thumbnail__link" href="/posts/12_solvingparametersniffing/">
+		<img class="thumbnail__image" src="/img/featured/piggy.png" alt="Parameter Sniffing: Practical Fixes That Work">
+		</a>
+	</figure>
+	<header class="list__header">
+		<h2 class="list__title post__title">
+			<a href="/posts/12_solvingparametersniffing/" rel="bookmark">
+			Parameter Sniffing: Practical Fixes That Work
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		<br> In the previous post, we covered the basics of parameter sniffing with a simple demo to show what actually happens. <br><br> We took a basic stored procedure and
+illustrated how the first plan to get cached can have severe performance implications&hellip;
+	</div>
+</article><article class="list__item post">
+	
+	<figure class="list__thumbnail thumbnail">
 		<a class="thumbnail__link" href="/posts/11_paramsniffingsimpleexample/">
 		<img class="thumbnail__image" src="/img/featured/sniff.png" alt="Parameter Sniffing: A Simple Example">
 		</a>
@@ -317,27 +336,6 @@ In the last post, we covered one of the many useful features of tSQLt, the Fake 
 <p>Welcome back to the <a href="https://www.leebrownhill.com/tags/tsql/">tSQLt series</a>, where we are covering the fundamentals of Unit Testing within SQL Server by using the tSQLt Framework.</p>
 <p>Today we&rsquo;re progressing onward by discussing some of the useful features within tSQLt to ensure our tests are accurate, reliable, and repeatable.</p>
 	</div>
-</article><article class="list__item post">
-	
-	<figure class="list__thumbnail thumbnail">
-		<a class="thumbnail__link" href="/posts/2_sqlunittestingpart2/">
-		<img class="thumbnail__image" src="/img/featured/tsqlt_logo.png" alt="SQL Unit Testing Using tSQLt: Part 2">
-		</a>
-	</figure>
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/posts/2_sqlunittestingpart2/" rel="bookmark">
-			SQL Unit Testing Using tSQLt: Part 2
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<br>
-<p>Unit Testing Experts!</p>
-<p>In the <a href="https://www.leebrownhill.com/posts/1_sqlunittestingpart1/">last post</a>, we went through what unit testing is, at least when discussing it in the context of SQL Server. In addition to that, we discussed what benefits using the open-source framework <a href="https://tsqlt.org/">tSQLt</a> can bring.
-Of course, you have studied that post diligently and now we&rsquo;re all unit testing experts, right? &hellip; hello?</p>
-	</div>
 </article>
 </main>
 
@@ -358,11 +356,11 @@ Of course, you have studied that post diligently and now we&rsquo;re all unit te
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
+			<li class="widget__item"><a class="widget__link" href="/posts/12_solvingparametersniffing/">Parameter Sniffing: Practical Fixes That Work</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/11_paramsniffingsimpleexample/">Parameter Sniffing: A Simple Example</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/10_sqlbits2025_helpingoutandhavingfun/">SQLBits 2025: Helping out and having fun</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/9_podcasts-speaking-and-why-now/">Podcasts, Speaking, and Why I’m Doing This Now</a></li>
 			<li class="widget__item"><a class="widget__link" href="/posts/8_redgatesqltestandsqlcop/">Redgate SQLTest and SQLCop</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/7_parallelismproblemswithsqlserver/">Parallelism Problems within SQL Server</a></li>
 		</ul>
 	</div>
 </div>
