--- a/about/index.html
+++ b/about/index.html
@@ -70,6 +70,11 @@ His journey in IT began many moons ago in IT support, where he quickly became fa
     })(window, document, "clarity", "script", "rtl5c4wqh1");
 	</script>
 
+
+	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6435499912518262"
+     crossorigin="anonymous"></script>
+	 
 </head>
 <body class="body">
 	<div class="container container--outer">
