--- a/contact/index.html
+++ b/contact/index.html
@@ -70,6 +70,11 @@ LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.
     })(window, document, "clarity", "script", "rtl5c4wqh1");
 	</script>
 
+
+	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6435499912518262"
+     crossorigin="anonymous"></script>
+	 
 </head>
 <body class="body">
 	<div class="container container--outer">
