--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
   <meta property="og:site_name" content="Lee Brownhill&#39;s Blog">
   <meta property="og:title" content="Contact">
   <meta property="og:description" content="The best way to contact me is via LinkedIn, as im quite active over there
-LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.co.uk">
+LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.co.uk If you’ve found this post helpful or would just like to support the work I do here, consider buying me a coffee.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -150,7 +150,14 @@ LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.
 <li>LinkedIn: <a href="https://www.linkedin.com/in/leebrownhill/">https://www.linkedin.com/in/leebrownhill/</a></li>
 <li>Email: lbrownhill [at] live.co.uk</li>
 </ul>
-
+<br>
+<br>
+<br>
+<hr>
+<p>If you’ve found this post helpful or would just like to support the work I do here, consider buying me a coffee.</p>
+<p><a href="https://www.buymeacoffee.com/leebrownhill" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/arial-green.png" alt="Buy Me A Coffee" style="height: 55px !important;width: 217px !important;" ></a></p>
+<br>
+<br>
 		</div>
 	</article>
 </main>
