--- a/contact/index.html
+++ b/contact/index.html
@@ -107,9 +107,9 @@ LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/projects">
+			<a class="menu__link" href="/talks">
 				
-				<span class="menu__text">projects</span>
+				<span class="menu__text">talks</span>
 				
 			</a>
 		</li>
