--- a/projects/index.html
+++ b/projects/index.html
@@ -106,9 +106,9 @@
 			</a>
 		</li>
 		<li class="menu__item">
-			<a class="menu__link" href="/projects">
+			<a class="menu__link" href="/talks">
 				
-				<span class="menu__text">projects</span>
+				<span class="menu__text">talks</span>
 				
 			</a>
 		</li>
