--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -185,7 +185,7 @@ How We Use Your Information To respond to inquiries To improve site performance 
 <p>If you have any questions about this policy, email us at <a href="mailto:lbrownhill@live.co.uk">lbrownhill@live.co.uk</a>.</p>
 <br>
 <br>
-<p>This policy was last updated on 10 November 2025.</p>
+<p><em>This policy was last updated on 10 November 2025.</em></p>
 <hr>
 <br>
 		</div>
