--- a/contact/index.html
+++ b/contact/index.html
@@ -62,13 +62,16 @@ LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.
         }
       </script>
 
-	<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "rtl5c4wqh1");
-	</script>
+
+
+
+
+	
+	<script src="/js/clarity.js"></script>
+
+
+
+
 
 
 	
