--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -65,13 +65,16 @@ How We Use Your Information To respond to inquiries To improve site performance 
         }
       </script>
 
-	<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "rtl5c4wqh1");
-	</script>
+
+
+
+
+	
+	<script src="/js/clarity.js"></script>
+
+
+
+
 
 
 	
