--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -71,16 +71,17 @@ How We Use Your Information To respond to inquiries To improve site performance 
 
 	
 	<script src="/js/clarity.js"></script>
-
-
+	<script src="/js/ads.js"></script>
 
 
 
 
 	
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6435499912518262"
-     crossorigin="anonymous"></script>
-	 
+	
+
+
+
+
 </head>
 <body class="body">
 	<div class="container container--outer">
