--- a/talks/index.html
+++ b/talks/index.html
@@ -68,16 +68,17 @@ October 2025: Redgate Simple Talk Podcast June 2025: Finding Data Friends Januar
 
 	
 	<script src="/js/clarity.js"></script>
-
-
+	<script src="/js/ads.js"></script>
 
 
 
 
 	
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6435499912518262"
-     crossorigin="anonymous"></script>
-	 
+	
+
+
+
+
 </head>
 <body class="body">
 	<div class="container container--outer">
