--- a/contact/index.html
+++ b/contact/index.html
@@ -68,16 +68,17 @@ LinkedIn: https://www.linkedin.com/in/leebrownhill/ Email: lbrownhill [at] live.
 
 	
 	<script src="/js/clarity.js"></script>
-
-
+	<script src="/js/ads.js"></script>
 
 
 
 
 	
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6435499912518262"
-     crossorigin="anonymous"></script>
-	 
+	
+
+
+
+
 </head>
 <body class="body">
 	<div class="container container--outer">
